# docview

./: AUTHORS  COPYING  Makefile.am  NEWS  README  README.md  README.rst  configure.ac  extensions.md
docs/: conf.py  doxygen.conf  index.rst  makefile  requirements.txt
docs/docview/: extensions.rst  index.rst  writing-extensions.rst
docs/libdocview/: index.rst  libdocview-c.rst  libdocview-cpp.rst
m4/: dummy
src/: Makefile.am  docview.cpp  welcome.html  window.ui
src/libdocview/: COPYING  Makefile.am  README.md  docview.h  docview.hpp  libdocview.cpp
