bin_PROGRAMS         =      docview

docview_SOURCES      =      docview.cpp

docview_CPPFLAGS     =      -Wall -Wextra -pedantic

docview_CPPFLAGS    +=      $(gtkmm_CFLAGS)
docview_CPPFLAGS    +=      $(webkit2gtk_CFLAGS)
docview_CPPFLAGS    +=      $(gtkmm_CFLAGS)
docview_CPPFLAGS    +=      $(gtk_CFLAGS)
docview_CPPFLAGS    +=      $(glibmm_CFLAGS)
docview_CPPFLAGS    +=      $(glib_CFLAGS)
docview_CPPFLAGS    +=      $(webkit2gtk_CFLAGS)

docview_LDADD        =      $(gtkmm_LIBS)
docview_LDADD       +=      $(webkit2gtk_LIBS)
docview_LDADD       +=      $(gtkmm_LIBS)
docview_LDADD       +=      $(gtk_LIBS)
docview_LDADD       +=      $(glibmm_LIBS)
docview_LDADD       +=      $(glib_LIBS)
docview_LDADD       +=      $(webkit2gtk_LIBS)
