lib_LTLIBRARIES              =      libdocview.la

libdocview_la_SOURCES        =      docview.h docview.hpp docview-c.h
libdocview_la_SOURCES       +=      libdocview.cpp

libdocview_la_CPPFLAGS       =      -Wall -Wextra -pedantic
libdocview_la_CPPFLAGS      +=      -I$(top_srcdir)/src/libdocview
libdocview_la_CPPFLAGS      +=      -std=c++17
libdocview_la_LIBADD         =      -ldl
