lib_LTLIBRARIES              =      libdocview.la
include_HEADERS              =      docview.hpp docview.h

libdocview_la_SOURCES        =      libdocview.cpp

libdocview_la_CPPFLAGS       =      -Wall -Wextra -pedantic
libdocview_la_CPPFLAGS      +=      -I$(top_srcdir)/src/libdocview
libdocview_la_CPPFLAGS      +=      -std=c++17
libdocview_la_LIBADD         =      -ldl
